подправлен интерфейс, добавлена фильтрация
