# Resources/openapi.yaml
@@ -542,6 +542,26 @@ components:
           type: string
         except_days:
           type: string
+        has_transfers:
+          type: boolean
+          description: Признак наличия пересадок по маршруту.
+        transfers:
+          type: array
+          items:
+            $ref: '#/components/schemas/Transfer'
+    Transfer:
+      type: object
+      properties:
+        type:
+          type: string
+        title:
+          type: string
+        short_title:
+          type: string
+        popular_title:
+          type: string
+        code:
+          type: string
     Pagination:
       type: object
       properties:
